# gsplat

./: .gitignore  CMakeLists.txt
gsplat/: rendering.py
gsplat/cuda/: _wrapper.py  ext.cpp
gsplat/cuda/csrc/: Projection.cpp  Projection.h  ProjectionEWA3DGSPacked.cu
gsplat/cuda/include/: Ops.h
viewer_bridge/: CMakeLists.txt  README.md  gsplat_bridge.cpp  gsplat_bridge.h
viewer_bridge/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h  rasterizer_stub.cpp
